# BOT_AI_V3

./: .claude-code.yml  .cursorrules  .env.example  .gitignore  .gitleaks.toml  .mcp-working.json  .mcp.json  .mcp_postgres_config.json  .pre-commit-config.yaml  .secrets.baseline  .sqlfluff  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_HOOKS_SETUP.md  COMMANDS.md  CONTRIBUTING.md  DATA_UPDATE_PROCESS.md  DEEP_SIGNAL_ANALYSIS.md  DEPLOYMENT_GUIDE.md  ENHANCED_SLTP_QUICKSTART.md  FEATURE_OPTIMIZATION_REPORT.md  FINAL_BOT_ANALYSIS.md  FINAL_ML_FIX_SUMMARY.md  FINAL_ML_STATUS.md  FINAL_STATUS_REPORT.md  FIX_MCP_PLAYWRIGHT.md  FULL_SYSTEM_READY.md  GEMINI.md  GITHUB_PRIVATE_REPO_SETUP.md  GPU_RTX5090_SOLUTION.md  GPU_SUCCESS_REPORT.md  LAUNCH_GUIDE.md  LAUNCH_INSTRUCTIONS.md  LICENSE  MCP_PLAYWRIGHT_FIXED.md  MCP_SETUP.md  MCP_STATUS.md  MIGRATION_COMPLETE.md  MIGRATION_VERIFICATION_TECHNICAL.md  (+367 more)
.claude/: settings.json
.github/workflows/: ai_code_review.yml  auto-deploy.yml  ci.yml  claude-code-manual.yml  claude-code.yml  claude-simple.yml  claude.yml  deploy.yml  test-monitor.yml  test-secrets.yml  test-simple.yml  test.yml
agents/: README.md  __init__.py  frontend_status_agent.py  testing_agent.py
ai_agents/: CLAUDE_SDK_FIXES.md  CROSS_VERIFICATION_GUIDE.md  README.md  __init__.py  agent_manager.py  automated_cross_verification.py  browser_ai_interface.py  claude_code_sdk.py  cli_cross_verification.py  cross_verification_system.py  quick_cross_verify.py  response_collector.py  template_cross_verify.py  workflow_templates.py
ai_agents/agents/: __init__.py  architect_agent.py  autonomous_developer.py
ai_agents/configs/: cross_verification_config.yaml  mcp_servers.yaml
ai_agents/examples/: __init__.py  usage_example.py
ai_agents/utils/: __init__.py  mcp_manager.py  token_manager.py
alembic/versions/: add_position_tracking_tables.py  create_ml_predictions_table.py
analysis_results/: analysis_warnings.txt  full_chain_test_results.json  last_background_analysis.txt  unified_test_report.json  unified_test_report.md
archive/: ml_manager_backup_240_features.py
archive/ml_config/: features_240_backup_240_features.py
archive/ml_logic/: feature_engineering_v2_backup_240_features.py
archive_20250823/: README.md
archive_20250823/old_configs/: test_trading.yaml  (+5 more)
config/: async_optimizations.json  config.yaml  logging.yaml  production_safety.yaml  risk_management.yaml  system.yaml  traders.yaml  trading.yaml  websocket_optimizations.json
core/: exceptions.py  logger.py  shared_context.py
data/: data_loader.py  data_update_service.py  maintenance_service.py
database/: README.md  README_REFACTORING.md  database_manager.py  db_manager.py
docs/: 100_PERCENT_COVERAGE_PLAN.md  499_ERRORS_SOLUTION.md  AGENTS_TROUBLESHOOTING.md  AI_COLLABORATION_REAL_WORLD.md  AI_CROSS_VERIFICATION_DEMO.md  AI_CROSS_VERIFICATION_SYSTEM.md  AI_INTEGRATION_COMPLETE.md  AI_VERIFICATION_OPTIMIZATION.md  API_ERRORS_FIXED.md  AUTOMATIC_DEPLOYMENT.md  CLAUDE_AGENTS_SETUP.md  CLAUDE_AGENTS_USAGE.md  CLAUDE_CODE_AGENTS.md  CLAUDE_CODE_SDK_EXPLAINED.md  CLAUDE_CODE_SETUP.md  CODE_QUALITY.md  CODE_USAGE_ANALYSIS_GUIDE.md  COMPLETE_DEVELOPMENT_SETUP.md  COMPLETE_MIGRATION_ROADMAP.md  COMPLETE_PROJECT_STRUCTURE.md  COMPLETE_STRUCTURE_UPDATE_SUMMARY.md  CONFIGURATION_ANALYSIS.md  CONFIGURATION_GUIDE.md  CROSS_VERIFICATION_UPDATE_SUMMARY.md  DATABASE_LOCAL_SETUP.md  DATABASE_MIGRATION_V2_TO_V3.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOTUSDT_ANALYSIS_REPORT.md  ENHANCED_RESPONSE_COLLECTION.md  ENHANCED_RISK_MANAGEMENT_GUIDE.md  ENHANCED_SLTP_V2_FEATURES.md  ERROR_FIXES_COMPLETE.md  FEATURE_ENGINEERING.md  FILE_STRUCTURE.md  FINAL_CLEANUP_REPORT.md  FIX_MCP_SERVERS.md  GPU_STATUS.md  HEALTH_CHECK_IMPLEMENTATION.md  HEDGE_MODE_GUIDE.md  (+68 more)
docs_v3/: core.md  database.md  ml.md  strategies.md  trading.md  web.md
examples/: ai_browser_collaboration.py  claude_sdk_demo.py  enhanced_risk_management_example.py  real_ai_browser_demo.py
exchanges/: README.md  __init__.py  exchange_manager.py  factory.py  registry.py
ml/: README.md  ml_config.yaml  ml_manager.py  ml_prediction_logger.py  ml_signal_processor.py  model_adapter.py  realtime_indicator_calculator.py  signal_details_logger.py  signal_scheduler.py
nginx/: nginx.conf
risk_management/: README.md  __init__.py  calculators.py  enhanced_calculator.py  manager.py  ml_risk_adapter.py
scripts/: analyze_logs.py  analyze_ml_predictions.py  apply_499_fixes.py  check_agents.py  check_background_analysis.py  check_bybit_balance.py  check_bybit_position_mode.py  check_config.py  check_data_availability.py  check_dot_positions.py  check_min_order_sizes.py  check_ml_database.py  check_ml_db_simple.py  check_ml_model.py  check_secrets.py  check_v3_readiness.py  code_chain_analyzer.py  complete_499_fix.sh  comprehensive_test_generator.py  coverage_monitor.py  create_ml_trader.py  demo_health_check.py  demo_ml_trader.py  docs_downloader.py  enhanced_dashboard_generator.py  enhanced_master_test_runner.py  fix_499_errors.sh  fix_database_schema.py  fix_db_config.py  fix_duplicate_signals.py  fix_logger_calls.py  fix_mcp_postgres.sh  fix_system_issues.py  fix_websocket_connections.py  full_chain_tester.py  generate_all_tests.sh  generate_business_tests.py  generate_debug_logs.py  health_check.py  interactive_code_cleanup.py  (+58 more)
strategies/: __init__.py  factory.py  manager.py  registry.py
test_results/: dashboard.html  test_report_20250820_143022.json  web_test_report_20250804_140331.html  web_test_report_20250804_140331.json
testing/: demo_page.html  run_web_tests.py  web_test_agent.py  web_test_agent_puppeteer.py  web_test_report.md
tests/: README.md  README_Position_Tracker.md  comprehensive_signal_order_tests.py  conftest.py  forced_signal_order_creation.py  position_tracker_test_suite.py  test_dashboard.html  test_health_check.py  trading_system_monitor.py
trading/: engine.py  instrument_manager.py  instrument_settings.py  order_executor.py  position_tracker.py
utils/: helpers.py  ml_pipeline_diagnostic.py
web/: launcher.py
(+406 files in other folders)
